Ultim push funcionant metode read()